--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/DB_SPRING
 spring.datasource.username=Naveen142005
 spring.datasource.password=Naveen@142005
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
